--- a/src/App.css
+++ b/src/App.css
@@ -120,3 +120,13 @@
   margin: 1rem;
   border-radius: 4px;
 }
+.popup{
+  display:block;
+  font-size: 3rem;
+  text-align: center;
+  font-weight: bolder;
+  text-decoration: underline;
+}
+.hidden{
+  display:none;
+}
